# 123456

./: pyproject.toml  requirements.txt  silicon_manganese_inventory.spec  zic2yq5F  硅锰合金库存管理系统.spec
.monkeycode/specs/silicon-manganese-inventory/: design.md  requirements.md  tasklist.md
silicon_manganese_inventory/: config.py  launch.sh  main.py
silicon_manganese_inventory/dao/: base_dao.py  database.py  inbound_dao.py  lab_dao.py  outbound_dao.py  seal_dao.py
silicon_manganese_inventory/models/: models.py
silicon_manganese_inventory/services/: excel_service.py  inbound_service.py  lab_service.py  outbound_service.py  report_service.py  seal_service.py  upgrade_service.py
silicon_manganese_inventory/tests/: test_all_daos.py  test_config.py  test_database.py  test_edge_cases.py  test_integration.py  test_models.py  test_seal_dao.py  test_services.py  test_stress.py
silicon_manganese_inventory/ui/: base_page.py  basic_data_page.py  customer_page.py  daily_shipment_page.py  excel_import_page.py  inbound_confirm_page.py  inventory_page.py  location_page.py  login_dialog.py  main_window.py  navbar.py  order_summary_page.py  outbound_page.py  pre_inbound_page.py  seal_manage_page.py  style.py
silicon_manganese_inventory/ui/dialogs/: base_eas_dialog.py  daily_shipment_dialog.py  excel_preview_dialog.py  inventory_balance_dialog.py  lab_result_dialog.py  location_detail_dialog.py  outbound_detail_dialog.py  outbound_dialog.py  pre_inbound_dialog.py  (+4 more)
silicon_manganese_inventory/utils/: autosave.py  logger.py  preferences.py  theme_manager.py  themes.py
