[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-manganese-inventory"
version = "1.0.0"
description = "硅锰合金库存管理系统 - PC 桌面端 PySide6 + SQLite"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "openpyxl>=3.1.0",
]
authors = [{name = "Developer"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
silicon-mn-inventory = "silicon_manganese_inventory.main:main"

[tool.setuptools.packages.find]
include = ["silicon_manganese_inventory*"]

[tool.pytest.ini_options]
testpaths = ["silicon_manganese_inventory/tests"]
python_files = ["test_*.py"]
